k8s/apps/prod/jellyseerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
  namespace: jellyseerr
spec:
  replicas: 3
  selector:
    matchLabels:
      app: jellyseerr
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - jellyseerr
              topologyKey: "kubernetes.io/hostname"

      # 2. The Init Container runs first to prepare the certificate
      containers:
        - name: jellyseerr
          image: ghcr.io/seerr-team/seerr:v3.5.0
          ports:
            - containerPort: 5055
          volumeMounts:
            - name: config
              mountPath: /app/config
            - name: trusted-certs
              mountPath: /usr/local/share/ca-certificates
          readinessProbe:
            httpGet:
              path: /api/v1/settings/public
              port: 5055
          podSecurityContext:
            fsGroup: 1000
            fsGroupChangePolicy: OnRootMismatch
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            privileged: false
            runAsUser: 1000
            runAsGroup: 1000
            seccompProfile:
              type: RuntimeDefault
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyseerr-config
        - name: trusted-certs
          emptyDir: {}
