k8s/apps/prod/jellyseerr/tmp-devpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: jellyseerr-dev-shell
spec:
  containers:
    - name: debug-shell
      image: alpine:latest
      command: ["/bin/sh", "-c", "sleep infinity"]
      volumeMounts:
        - name: config-storage
          mountPath: /app/config
  volumes:
    - name: config-storage
      persistentVolumeClaim:
        claimName: jellyseerr-config
