k8s/apps/prod/jellyseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  namespace: jellyseerr
spec:
  selector:
    app: jellyseerr
  ports:
    - port: 5055
      targetPort: 5055
