k8s/apps/prod/jellyseerr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyseerr
  namespace: jellyseerr
  annotations:
    kubernetes.io/ingress.class: traefik-external
    gethomepage.dev/href: "https://request.oplabs.us"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Plex Request"
    gethomepage.dev/description: "Manage requests for Plex content"
    gethomepage.dev/group: "Extras"
    gethomepage.dev/icon: "https://raw.githubusercontent.com/jellyseerr/jellyseerr/main/public/favicon.ico"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`request.oplabs.us`) && !PathPrefix(`/api/v1/status`) && !PathPrefix(`/api/v1/settings/public`) && PathPrefix(`/`)
      kind: Rule
      middlewares: []
        # - name: jellyseerr-basicauth
        #   namespace: jpdesigns
        # - name: default-headers
        #   namespace: traefik
        # - name: crowdsec-bouncer
        #   namespace: traefik
      services:
        - name: jellyseerr
          port: 5055
  tls:
    secretName: oplabs-us-tls # give it the ole tls cert
